--- a/index.css
+++ b/index.css
@@ -5,24 +5,24 @@ html {
 
 .back {
   width: 100%;
-  -webkit-filter: grayscale(100%);
   /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
   height: 100vh;
   object-fit: cover
 }
 
 .navbar {
   display: flex;
-  justify-content: center;
-  background-color: black
+  /* justify-content: center; */
+  background-color: transparent
 }
 .navbar-brand {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-.navbar-expand-lg {
+.navbar-expand-md {
   display: flex;
+  /* background-color: transparent !important; */
+
   /* justify-content: center; */
 }
 
@@ -54,7 +54,12 @@ html {
   }
 }
 .highlight {
-  color: orangered
+  color: rgb(0, 4, 255)
+}
+.top {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: rgb(0, 4, 255)
+
 }
 
 
@@ -64,11 +69,11 @@ html {
 
 }
 .btn-primary {
-  background-color: orangered;
+  background-color: rgb(0, 4, 255);
   padding: 16px 30px;
   border-radius: 0;
   border: 1px;
-  border-color: orangered;
+  border-color: rgb(0, 4, 255);
   border-style: solid;
   transition: all 0.5s;
   font-size: 14px;
@@ -85,10 +90,10 @@ html {
 }
 
 a {
-  color: orangered  
+  color: white 
 }
 i {
-  color: orangered
+  color: #D4DCE1
 }
 
 .text-box {
@@ -201,24 +206,30 @@ i {
   padding: 3vh;
   
 }
+.cerX {
+  text-align: center;
+  padding: 3vh;
+  background-color: #E9F1F7
+  
+}
 
 .cer1 {
   text-align: center;
   padding: 3vh;
   padding-top: 0;
   padding-bottom: 6vh;
-  background-color: lightgray
+  background-color: #182c72a1
 }
 .cerZ {
   text-align: center;
   padding: 3vh;
-  background-color: lightgray
+  background-color: #182c72a1
 }
 
 .cerA {
   text-align: center;
   padding: 3vh;
-  background-color: rgb(185, 185, 185)
+  background-color: #E9F1F7
 }
 
 .cerB {
