--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ html {
 }
 .top {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(0, 4, 255)
+  /* color: rgb(0, 4, 255) */
 
 }
 
